refactor: convert DTOs to records for improved immutability and conciseness
- Updated all DTO classes to Java `record` types (e.g., `BoardResponse`, `ArticleResponse`, `RecruitListResponse`).
- Replaced `@Builder` and `@Getter` with record syntax for constructor generation and field access.
- Simplified stream operations by replacing `.collect(Collectors.toList())` with `.toList()`.
- Removed redundant constructors in request DTOs for clarity.